# epic-expreval

./: .gitignore  README.md  evalctx.py  functions.py  main.py  pyproject.toml  ue_tokenizer.py
.github/workflows/: release.yml  test.yml
epic_expreval/: __init__.py  evalctx.py  functions.py  tokenizer.py
epic_expreval.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_custom_context.py  test_fortnite.py  test_ginger.py  test_math.py  test_negation.py
